[package]
name = "nb2pb"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/nb2pb"
documentation = "https://docs.rs/nb2pb"
description = """
Compiles NetsBlox projects into PyBlox projects
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nb2pb"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "nb2pb"
path = "src/main.rs"

[dependencies]
netsblox-ast = "=0.2.25"
serde = "1.0"
serde_json = "1.0"
once_cell = "1.17.1"
regex = "1.7.3"
lazy_static = "1.4.0"
pyo3 = { version = "0.18.2", features = ["extension-module"], optional = true }

[build-dependencies]
pyo3-build-config = "0.18.2"
